# chatwheel

./: Dockerfile  README.md  build.sh  chatwheel.opam  chatwheel.opam.locked  package.json
backend/: chatwheel.opam  chatwheel.opam.locked  dune-project
chatwheel_backend/: Procfile  chatwheel_backend.opam  chatwheel_backend.opam.locked  dune-project  package.json  sample_webhook.json
chatwheel_backend/esy.lock/: index.json
chatwheel_backend/lib/: chatwheel_backend.ml  dune  inline_input.ml  inline_response.ml  search.ml  telegram_client.ml
chatwheel_core/: .gitignore  dune-project  package.json
chatwheel_core/esy.lock/: index.json
chatwheel_core/lib/: Audio.ml  Chatwheel_core.ml  Search.ml  dune
chatwheel_frontend/: dune-project  esy.json  package-lock.json  package.json  webpack.config.js
chatwheel_frontend/assets/: mybulma.css
chatwheel_frontend/esy.lock/: index.json
chatwheel_frontend/lib/: App_input.ml  Chatwheel_frontend.ml  Frontend_common.ml  Results_component.ml  Search_bar.ml  dune  index.html
chatwheel_frontend/src/: Chatwheel_frontend.ml  dune  index.html
esy.lock/: .gitignore.swp  index.json
lib/: audio.ml  chatwheel.ml  dune  inline_input.ml  inline_response.ml  response.ml  telegram_client.ml  utils.ml
priv/: scraper.py
priv/data/: audio.json
